--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.2",
     "@mui/material": "^5.16.2",
     "@popperjs/core": "^2.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.0"
+    "react-hook-form": "^7.52.1",
+    "react-router-dom": "^6.25.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.1",
