--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.16.2",
     "@mui/material": "^5.16.2",
     "@popperjs/core": "^2.11.8",
+    "generate-react-cli": "^8.4.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
